
4.72  2014-01-29
  - Fixed bug in Mojo::Transaction::WebSocket that prevented decompression
    errors from being handled gracefully.

4.71  2014-01-28
  - Fixed a few compression bugs in Mojo::Transaction::WebSocket and
    Mojo::Content.

4.70  2014-01-26
  - Added extract_usage method to Mojolicious::Command.
  - Added unindent method to Mojo::ByteStream.
  - Added unindent function to Mojo::Util.
  - Updated jQuery to version 2.1.
  - Improved all built-in commands to show usage information in their SYNOPSIS
    sections.
  - Improved tag helpers to make data attributes more convenient. (ravengerUA)
      %= tag 'div', data => {my_id => 1, Name => 'test'} => 'some content'
    is equivalent to
      %= tag 'div', data-my-id => 1, data-name => 'test' => 'some content'
  - Fixed indentation of code in documentation browser.

4.69  2014-01-24
  - Improved router to allow format detection for bridges.

4.68  2014-01-22
  - Added Mojo::DOM::Node.
  - Added contents and node methods to Mojo::DOM.
  - Removed deprecated http_proxy, https_proxy, name and no_proxy attributes
    from Mojo::UserAgent.
  - Removed deprecated app, app_url, detect_proxy and need_proxy methods from
    Mojo::UserAgent.
  - Improved router to allow placeholders anywhere in a pattern to become
    optional.
      "get '/foo/:bar/baz' => {bar => 'bar'};" now matches "/foo/baz"
      "get '/foo(:bar)baz' => {bar => 'bar'};" now matches "/foobaz"
  - Improved request_ok method in Test::Mojo to handle WebSocket handshakes.
  - Improved Mojo::IOLoop::Server to use address and port for descriptor
    inheritance.
  - Improved list of available commands to be alphabetical. (jberger)
  - Fixed select_field helper to be nondestructive.
  - Fixed XML semantics bug in Mojo::DOM::HTML.

4.67  2014-01-11
  - Added history and max_history_size attributes to Mojo::Log.
  - Improved exception and not found pages with log messages.
  - Improved exception page with more information.