@@ -312,6 +312,20 @@ differently. (Passed a callback leading to the next hook, the current
 controller object, the action callback and a flag indicating if this action is
 an endpoint)
 
+=head2 before_render
+
+Emitted before content is generated by the renderer. Note that this hook can
+trigger out of order due to its dynamic nature, and with embedded applications
+will only work for the application that is rendering.
+
+  $app->hook(before_render => sub {
+    my ($c, $args) = @_;
+    ...
+  });
+
+Mostly used for pre-processing arguments passed to the renderer. (Passed the
+current controller object and the render arguments)
+
 =head2 after_render
 
 Emitted after content has been generated by the renderer that is not partial.
